Flickering when HDR is enabled on eDP display
Brief summary of the problem:
Enabling HDR on my laptop (ASUS Zenbook 14 Flip OLED UN5401QA), either through Plasma 6 or running an app with gamescope
, causes the whole screen to continuously flicker.
The patch that caused it: https://lists.freedesktop.org/archives/amd-gfx/2024-January/102725.html
The attached patch is enough to fix it.
Hardware description:
- CPU: AMD Ryzen 7 5800h
- GPU: Radeon Vega 8 (Cezanne)
- System Memory: 16GB LPDDR4X
- Display(s): Built-in Laptop OLED Display (Samsung ATNA40YK04-0)
- Type of Display Connection: eDP
System information:
- Distro name and Version: Arch Linux
- Kernel version: 6.7.2 (issue also occurs on 6.6.11+)
- Custom kernel: no
- AMD official driver version: N/A (using mesa 23.3.5)
How to reproduce the issue:
Start Plasma 6, open System Settings -> Display and Monitor -> Enable HDR.
Or, in a separate tty, run an HDR enabled app with gamescope
e.g mpv:
ENABLE_GAMESCOPE_WSI=1 gamescope --hdr-enabled --expose-wayland -- /usr/bin/mpv --no-config --vo=gpu-next --gpu-api=vulkan --gpu-context=waylandvk --target-colorspace-hint <path-to-hdr-video>
Attached files:
Edited by sporif